some z index issues on mobile now fixed. Desktop components implemented in mobile mode. all that's left is to style the components for mobile use and then testing and then prod

--- a/src/app/components/Navigation/MobileNavigation/MobileNavigation.module.scss
+++ b/src/app/components/Navigation/MobileNavigation/MobileNavigation.module.scss
@@ -1,5 +1,5 @@
 nav.container{
-    z-index: 600;
+    // z-index: 1;
     box-sizing: border-box;
     position: fixed;
     left: 0;
