--- a/src/app/components/UserIcon/User/User.scss
+++ b/src/app/components/UserIcon/User/User.scss
@@ -1,10 +1,8 @@
 .user-modal{
     position: fixed;
     box-sizing: border-box;
-    top: calc( 50vh - 190px);
-    left: 50%;
     width: calc( 100vw - 50px);
-    transform: translateX(-50%);
+    place-self: center;
     max-width: 400px;
     color: var(--text-secondary);
     background-color: var(--bg-primary);
@@ -34,7 +32,8 @@
         transform: translateX(-50%);
         margin: 0;
         border: 4px solid var(--nav-bg);
-        background-color: var(--nav-bg);
+        background-color: var(--bg-border);
+        transition: background-color 350ms, border 350ms;
     }
     & h1{
         margin: 0 0 26px 0;
