--- a/src/app/components/globals/globals.scss
+++ b/src/app/components/globals/globals.scss
@@ -120,7 +120,7 @@ h6.bw{
     overscroll-behavior: contain;
     -webkit-overflow-scrolling: touch;
     &.with-user{
-        position: fixed;
+        position: relative;
     }
     @media screen and (min-width: 950px) {
         position: relative;
