--- a/src/app/components/globals/styles/Modal.scss
+++ b/src/app/components/globals/styles/Modal.scss
@@ -6,7 +6,7 @@
     width: 100vw;
     background-color: #000000aa;
     display: none;
-    z-index: 800;
+    z-index: 1000;
     overflow: scroll;
 }
 .modal-backdrop.open{
