--- a/src/app/pages/Add/MobileAdd/MobileAdd.scss
+++ b/src/app/pages/Add/MobileAdd/MobileAdd.scss
@@ -13,10 +13,21 @@
     }
     background-size: 100vw 190px;
     background-repeat: no-repeat;
+
     & .add-holder{
         border: 3px solid var(--blog-accent);
         border-radius: 8px;
         overflow: hidden;
+
+        & .holder {
+            position: relative;
+
+            & .tag {
+                position: absolute;
+                right: 0px;
+                top: 20px;
+            }
+        }
 
         & .autofill-divider{
             font-size: 16px;
