--- a/src/app/pages/Locator/MobileLocator/MobileLocator.module.scss
+++ b/src/app/pages/Locator/MobileLocator/MobileLocator.module.scss
@@ -1,10 +1,10 @@
 .container {
-
     &>.map {
         position: absolute;
         top: 0;
         left: 0;
         height: calc(100vh - 56px);
+        z-index: 0;
         width: 100vw;
 
         & .search-area--btn {
